@startuml

!define ENTITY class
!define SERVICE class
!define CONTROLLER class
!define REPOSITORY class

package org.example.stockmarket.cash.controller {
    CONTROLLER CashController
}

package org.example.stockmarket.cash.entity {
    ENTITY Cash
    ENTITY CashModified
}

package org.example.stockmarket.cash.repository {
    REPOSITORY CashRepository
    REPOSITORY CashModifiedRepository
}

package org.example.stockmarket.cash.service {
    SERVICE CashService
}

CashController --> CashService

Cash --> CashModified

CashService --> CashRepository
CashService --> CashModifiedRepository

@enduml

